gün8: scribe OAuth library ve Jumblr library'lerinin incelenmesi ve 9.güne geçiş...